# pcmlai.capstone

./: .gitignore  README.md  all_in_one.ipynb  data_exploration.ipynb  pyproject.toml  requirements.txt  start_api.ps1
.ipynb_checkpoints/: README-checkpoint.md
scripts/: build_vector_index.py  clean_scraped_data.py  download_deepfashion.py  download_kaggle_datasets.py  extract_features.py  generate_embeddings.py  generate_statistics.py  generate_synthetic_data.py  organize_data.py  prepare_clothing_type_dataset.py  prepare_condition_dataset.py  prepare_multitask_dataset.py  prepare_price_dataset.py  prepare_splits.py  process_deepfashion_to_csv.py  scrape_marketplaces.py  start_api.py  train_clothing_type.py  train_condition_assessment.py  train_multitask_model.py  train_price_model.py
src/: __init__.py
src/api/: __init__.py  app.py  pipeline.py  schemas.py
src/data/: synthetic.py
src/data/scrapers/: __init__.py  base_scraper.py  depop_scraper.py  poshmark_scraper.py  thredup_scraper.py
src/models/: embeddings.py  llm.py  price.py  vision.py
src/utils/: llm_evaluation.py  logging.py
src/vector_search/: __init__.py  indexing.py  similarity.py
